version 0.2 (20??-??-??):
	* Added Windows compilation support

version 0.1 (2010-02-05):
	* initial version