@@ -1,5 +1,6 @@
 version 0.2 (20??-??-??):
 	* Added Windows compilation support
+	* Send unavailable presences when shutting transport down
 
 version 0.1 (2010-02-05):
 	* initial version
